--- a/browser/scss/about/main.scss
+++ b/browser/scss/about/main.scss
@@ -1,56 +1,20 @@
-#video-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
+.image-bg-fluid-height {
+    text-align: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
-#video-bg > video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.image-bg-fluid-height {
+    background: url('images/working.png') no-repeat center center scroll;
+    padding: 100px 0;
 }
 
-/* 1. No object-fit support: */
-
-@media (min-aspect-ratio: 16/9) {
-    #video-bg > video {
-        height: 300%;
-        top: -100%;
-    }
+.img-center {
+    margin: 0 auto;
 }
 
-@media (max-aspect-ratio: 16/9) {
-    #video-bg > video {
-        width: 300%;
-        left: -100%;
-    }
-}
-
-/* 2. If supporting object-fit, overriding (1): */
-
-@supports (object-fit: cover) {
-    #video-bg > video {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
-p.introduction:first-letter {
-    font-size: 300%;
-    float: left;
-    line-height: 5%;
-    padding-top: 1%;
-    padding-right: 1%;
-}
-
-img.img-circle.img-responsive.img-center {
-    border: inset white 5px;
+.title {
+    color: #5898f1;
 }
