--- a/browser/scss/directives/logo.scss
+++ b/browser/scss/directives/logo.scss
@@ -1,12 +1,12 @@
-logo {
+.logo {
     display: block;
-    img {
-        display: block;
-        max-height: 60px;
-    }
-    margin-top: 5px;
     margin-right: 20px;
     width: 40px;
-    margin-top: -15px;
+    margin-top: 10px;
     margin-left: 10px;
+}
+
+.rankmeLogo {
+    max-width: 200px;
+    margin-top: 5%;
 }
