--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -45,47 +45,19 @@ button.btn.btn-lg.btn-primary.btn-block {
 }
 
 .btn-primary {
-    color: black;
-    background-color: white;
-    border-color: black;
-    border: 3px solid black;
+    color: white;
+    background-color: #5898f1
+    border: transparent;
 }
 
 .btn-primary:active:hover {
-    color: black;
-    background-color: #5898f1;
+    color: white;
+    background-color: lighten(#5898f1, 50%);
     border-color: #5898f1;
 }
 
 .btn-standard:hover {
-    color: black;
-    background-color: #5898f1;
+    color: white;
+    background-color: lighten(#5898f1, 50%);
     border-color: #5898f1;
-}
-
-.btn-social {
-    margin-top: 3%;
-    margin-bottom: 3%;
-}
-
-@media (max-width: 767px) {
-    button.btn.btn-lg.btn-primary.btn-block.btn-standard {
-        text-align: left;
-    }
-}
-
-.navbar-toggle:hover {
-    background-color: white;
-}
-
-.navbar-toggle {
-    background-color: black;
-    background-image: none;
-    border: 1px groove white;
-}
-
-@media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-        color: white;
-    }
 }
