--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -10,7 +10,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Rank Me</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <!-- For old IEs -->
+    <link rel="shortcut icon" href="favicon.ico" />
+    <!-- For new browsers multisize ico  -->
+    <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="favicon.ico">
+    <!-- Chrome for Android -->
+    <link rel="icon" sizes="192x192" href="favicon-192.png">
+    <!-- For iPhone 6+ downscaled for other devices -->
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="favicon-180.png">
+    <!-- For IE10 Metro -->
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="favicon-144.png">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Material icons -->
@@ -58,7 +68,7 @@
 </head>
 
 <body ng-app="Robopocalypse">
-    <navbar></navbar>
+    <the-navbar></the-navbar>
     <div class="container mainContainer">
         <div class="row marginBottom">
             <div ui-view></div>
