Quora scraper working
Signed-off-by: Violet Siegius <fvcproductions@icloud.com>

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -83,3 +83,8 @@ a {
 .valign-middle [class*="column"] + [class*="column"]:last-child {
     float: none;
 }
+
+.mdl-card {
+    z-index: 0;
+    width: 100%;
+}
