--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -24,14 +24,6 @@ a {
     }
 }
 
-.btn:hover {
-    cursor: url(http://cur.cursors-4u.net/others/oth-7/oth639.cur), progress !important;
-    border: 1px solid #5898f1;
-    outline: 0;
-    color: white;
-    background-color: #5898f1;
-}
-
 .initialFontSize {
     font-size: initial;
 }
@@ -66,6 +58,10 @@ a {
     margin-bottom: 15px;
 }
 
+.marginLittleTop {
+    margin-top: 3%;
+}
+
 .morePadding {
     padding: 5%;
 }
@@ -87,4 +83,8 @@ a {
 .mdl-card {
     z-index: 0;
     width: 100%;
+}
+
+input {
+    width: 75%;
 }
