Made changes to login and crawler
Signed-off-by: Violet Siegius <fvcproductions@icloud.com>

--- a/browser/scss/directives/buttons.scss
+++ b/browser/scss/directives/buttons.scss
@@ -35,3 +35,7 @@ button.btn.btn-lg.btn-primary.btn-block {
     margin-top: 1%;
     margin-bottom: 1%;
 }
+
+.btn-social.btn-lg {
+    text-align: center;
+}
